@@ -1,3 +1,9 @@
+2005-11-09 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/scim_prime_imengine_factory.cpp:
+	Add package name and version into authors text.
+	Thank you for your notifying > Masatake YAMATO <jet@gyve.org>
+
 2005-11-08 Takuro Ashie <ashie@homa.ne.jp>
 
 	* src/scim_canna_imengine_factory.cpp: Add help.
